# lightudq

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: lightudq.html  search.js
docs/lightudq/: document_quality.html  prompts.html  schemas.html  utils.html
src/lightudq/: __init__.py  document_quality.py  prompts.py  schemas.py  udq.py
tests/: test_udq.py  test_utils.py
