[project]
name = "lightudq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sarabjot Singh", email = "sarabjot@lightup.ai" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
lightudq = "lightudq:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
