[project]
name = "lightudq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sarabjot Singh", email = "sarabjot@lightup.ai" }
]
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.53.0",
    "dotenv>=0.9.9",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.16",
    "pymupdf>=1.26.0",
    "pytest>=8.4.0",
]

[project.scripts]
lightudq = "lightudq:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
